# streamlit-dashboard-rodez-city-hall

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml
.streamlit/: config.toml
src/components/: __init__.py  footer.py
src/config/: __init__.py  setting.py
src/data/: liste_des_deces.csv  liste_des_mariages.csv
src/pages/: advanced_analysis.py  birth.py  death.py  game.py  home.py  temporal_exploration.py  wedding.py
src/static/css/: style.css
src/tests/: data_loader_test.py
src/utils/: __init__.py  css_loader.py  data_loader.py  data_loader_rules.py
