[project]
name = "population-mariages-deces-naissances-rodez"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.2",
    "pandas-stubs==2.3.2.250827",
    "plotly>=6.3.0",
    "pre-commit>=4.3.0",
    "ruff>=0.12.12",
    "streamlit>=1.49.1",
    "streamlit-shadcn-ui>=0.1.18",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]